--- a/templates/current_datetime.html
+++ b/templates/current_datetime.html
@@ -6,7 +6,12 @@
 </head>
 <body>
 
-Привет мой друг! Сейчас {{ current_date }}.
+    {% include 'nav.html' %}<br>
+
+    <h1>Мой сайт точного времени</h1>
+    <p>Сейчас {{ current_date }}.</p>
+    <hr>
+    <p>Спасибо, что посетили мой сайт.</p>
 
 </body>
 </html>
